<resources>
    <string name="app_name">Kursinis</string>
    <string name="login_btn_lt">Junkis</string>
    <string name="login_btn_en">Log in</string>
    <string name="register_btn">Register</string>
    <string name="update_info">Update</string>
    <string name="delete_btn">Delete</string>
    <string name="back">Back</string>

    <string name="login">Login</string>
    <string name="psw">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="license">License</string>
    <string name="bDate">Birth Date</string>
    <string name="vehicleType">Vehicle Type</string>
    <string name="isDriver">Is Driver?</string>

    <string name="history_en">View history</string>
    <string name="update_btn_en">My info</string>

    <string name="send_btn">Send</string>
    <string name="body_text">Enter Message...</string>

    <string name="complete_btn">Complete Order</string>
    <string name="review_btn">Leave Review</string>

    <string name="app_name_text">Bwolt</string>
    <string name="register_text">Registration</string>
    <string name="select_text">Select:</string>
    <string name="info_text">Account Details</string>
    <string name="orders_text">My Orders</string>
    <string name="order_info_text">Order Details</string>
</resources>